[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-analyzer"
version = "0.1.0"
description = "Fraud verdict analyzer — reviews classifier output and blocks confirmed attackers"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "psycopg2-binary>=2.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["config*", "ingestion*", "analyzer*", "output*"]
